[metadata]
name = waybackpy
version = attr: waybackpy.__version__
description = attr: waybackpy.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = attr: waybackpy.__license__
author = attr: waybackpy.__author__
author_email = attr: waybackpy.__author_email__
url = attr: waybackpy.__url__
download_url = attr: waybackpy.__download_url__
project_urls =
    Documentation = https://github.com/akamhy/waybackpy/wiki
    Source = https://github.com/akamhy/waybackpy
    Tracker = https://github.com/akamhy/waybackpy/issues
keywords =
    Archive Website
    Wayback Machine
    Internet Archive
    Wayback Machine CLI
    Wayback Machine Python
    Internet Archiving
    Availability API
    CDX API
    savepagenow
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >= 3.4
install_requires =
    click
    requests

[options.extras_require]
dev =
    black
    codecov
    flake8
    mypy
    pytest
    pytest-cov


[options.entry_points]
console_scripts =
    waybackpy = waybackpy.cli:main

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = E203,W503,E501
