[metadata]
name = waybackpy
version = attr: waybackpy.__version__
description = attr: waybackpy.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = attr: waybackpy.__license__
author = attr: waybackpy.__author__
author_email = attr: waybackpy.__author_email__
url = attr: waybackpy.__url__
download_url = attr: waybackpy.__download_url__
project_urls =
    Documentation = https://github.com/akamhy/waybackpy/wiki
    Source = https://github.com/akamhy/waybackpy
    Tracker = https://github.com/akamhy/waybackpy/issues
keywords =
    Archive Website
    Wayback Machine
    Internet Archive
    Wayback Machine CLI
    Wayback Machine Python
    Internet Archiving
    Availability API
    CDX API
    savepagenow
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click
    requests
    urllib3

[options.extras_require]
dev =
    black
    codecov
    flake8
    mypy
    pytest
    pytest-cov
    setuptools>=46.4.0
    types-requests

[options.entry_points]
console_scripts =
    waybackpy = waybackpy.cli:main

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:pytest]
addopts =
    # show summary of all tests that did not pass
    -ra
    # enable all warnings
    -Wd
    # coverage and html report
    --cov=waybackpy
    --cov-report=html
testpaths =
    tests
