[metadata]
name = waybackpy
version = attr: waybackpy.__version__
description = Python package that interfaces with the Internet Archive's Wayback Machine APIs. Archive pages and retrieve archived pages easily.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Akash Mahanty
author_email = akamhy@yahoo.com
url = https://akamhy.github.io/waybackpy/
download_url = https://github.com/akamhy/waybackpy/releases
project_urls =
    Documentation = https://github.com/akamhy/waybackpy/wiki
    Source = https://github.com/akamhy/waybackpy
    Tracker = https://github.com/akamhy/waybackpy/issues
keywords =
    Archive Website
    Wayback Machine
    Internet Archive
    Wayback Machine CLI
    Wayback Machine Python
    Internet Archiving
    Availability API
    CDX API
    savepagenow
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Typing :: Typed
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click
    requests
    urllib3

[options.extras_require]
dev =
    black
    codecov
    flake8
    mypy
    pytest
    pytest-cov
    setuptools>=46.4.0
    types-requests

[options.entry_points]
console_scripts =
    waybackpy = waybackpy.cli:main

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W503,W605
exclude =
    venv
    __pycache__
    .venv
    ./env
    venv/
    env
    .env
    ./build

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:pytest]
addopts =
    # show summary of all tests that did not pass
    -ra
    # enable all warnings
    -Wd
    # coverage and html report
    --cov=waybackpy
    --cov-report=html
testpaths =
    tests
